@@ -6,6 +6,9 @@ cryptsetup (2:2.1.0-2) UNRELEASED; urgency=medium
       and "COPYING.LGPL" files.  Since 2:2.1.0-1 the cryptsetup binaries and
       library are linked against libssl, which is the new upstream default
       backend for LUKS header processing.
+  * debian/askpass.c: in the console backend, clear stdin's end-of-file
+    indicator before calling getline() again.  Thanks to Ken Milmore for the
+    detailed report and patch.  (Closes: #921906.)
 
  -- Guilhem Moulin <guilhem@debian.org>  Mon, 11 Feb 2019 14:39:40 +0100
 
